--- a/css/register.css
+++ b/css/register.css
@@ -12,7 +12,7 @@ html, body {
     overflow: hidden;
 
     /* Set background image */
-    background: url('image/bg.png') no-repeat center center fixed;
+    background: url('../image/bg.png') no-repeat center center fixed;
     background-size: cover; /* Ensures the image covers the whole screen */
     height: 100%;
     position: relative; /* Allows for absolute positioning of the overlay */
