--- a/css/category.css
+++ b/css/category.css
@@ -458,11 +458,48 @@ h1, h2 {
 .card .badge {
     position: absolute;
     top: 10px;
-    right: 10px;
-    font-size: 0.9rem;
-    padding: 0.5rem;
-    z-index: 1;
+    left: 10px;
+    padding: 8px 10px;
+    border-radius: 2px;
+    font-size: 12px;
+    color: white;
+    font-weight: bold;
+    text-transform: uppercase;
 }
+
+/* Style for the modal badge */
+#modalBadge {
+    display: inline-block; /* Display only when set */
+    padding: 15px 10px; /* Padding for spacing */
+    border-radius: 5px; /* Rounded corners */
+    margin-right: auto;
+}
+
+/* Ensure the modal actions section is styled correctly */
+.modal-actions {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center; /* Align badge and button */
+    margin-top: 20px; /* Space from the book description */
+}
+
+/* Style for the modal image */
+.modal-image {
+    width: 100%; /* Adjust as needed */
+    max-width: 300px; /* Set a max width */
+    height: auto; /* Maintain aspect ratio */
+    border-radius: 10px; /* Rounded corners */
+}
+
+#bookModal .badge-borrowed {
+    background-color: #dc3545; /* Red for "Borrowed" */
+}
+
+#bookModal .badge-free {
+    background-color: #28a745; /* Green for "New" */
+}
+
 
 .genres-row {
     display: flex;
@@ -575,16 +612,12 @@ h1, h2 {
 }
 
 /* Badge Styles */
-.badge-new {
-    background-color: #28a745;
-    color: white;
+.badge-borrowed {
+    background-color: #dc3545; /* Red for "Borrowed" */
 }
-
-.badge-best-seller {
-    background-color: #ffc107;
-    color: white;
+.badge-free {
+    background-color: lightgreen;
 }
-
 /* Button Styles */
 .btn-primary {
     background-color: #007bff;
